[package]
name = "rust_lib_audio_player"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_lib_audio_player"
crate-type = ["cdylib", "staticlib"]
path ="src/lib.rs"

[[example]]
name = "app"
path = "src/example/test.rs"

[[example]]
name = "test"
path = "src/example/test1.rs"

[dependencies]
flutter_rust_bridge = "=2.6.0"
rodio = "^0.20.1"
symphonia = "^0.5"
tokio = { version = "^1", features = ["full"] }
serde = "^1"
serde_json = "^1"
lazy_static = "1.5.0"
reqwest = {version = "0.12.9", features = ["blocking","json"]}
rand = "0.8.5"
dart-sys = "^4"
chrono = "^0.4"

[profile.release]
strip=true
lto=true
codegen-units=1
opt-level='z'
panic='abort'
