[package]
name = "rust_lib_audio_player"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "rust_lib_audio_player"
crate-type = ["cdylib", "staticlib"]
path ="src/lib.rs"

[[example]]
name = "test"
path = "src/example/test.rs"

[[example]]
name = "test1"
path = "src/example/test1.rs"

[[example]]
name = "test2"
path = "src/example/testReq.rs"


[dependencies]
flutter_rust_bridge = "=2.6.0"
rodio = "^0.20"
symphonia = "^0.5"
tokio = { version = "^1", features = ["full"] }
serde = "^1"
serde_json = "^1"
lazy_static = "1.5.0"
reqwest = {version = "^0.12", features = ["blocking","json"]}
rand = "^0.8"
chrono = "^0.4"
id3 = "^1"
## 使用ffmpeg-next 要配置 ffmpeg-4.3 交叉编译后的环境 和 llvm 以及 MinGW64环境
#ffmpeg-next = {version = "^7", features = ["format"]}

[build-dependencies]
config = "^0.15"
serde = { version = "^1", features = ["derive"] }
dotenv = "^0.15"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 'z'
panic = 'abort'
